# jupyter

./: .gitignore  README.md  install.json  jupyter_lite_config.json  package-lock.json  package.json  pyproject.toml  service-worker.js
.github/workflows/: deploy.yml
content/: .gitattributes  GPU.js in jupyterlite.ipynb  allocation.ipynb  allocation_cvxpy.ipynb  data_grid.ipynb  df_format.ipynb  linprog.py
content/data/: portfolio.csv
