[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.18",
    "bqplot>=0.12.45",
    "ipympl>=0.9.7",
    "jupyterlab>=4.4.7",
    "jupyterlab-night>=0.5.2",
    "jupyterlab-widgets>=3.0.15",
    "jupyterlite-core>=0.6.4",
    "jupyterlite-pyodide-kernel>=0.6.1",
    "nblink>=0.1.12",
    "notebook>=7.4.5",
    "plotly>=6.3.0",
]

[tool.hatch.build.targets.sdist]
artifacts = ["coi_serviceworker/labextension"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.shared-data]
"coi_serviceworker/labextension" = "share/jupyter/labextensions/coi-serviceworker"
"install.json" = "share/jupyter/labextensions/coi-serviceworker/install.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "coi_serviceworker/labextension/package.json",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:labextension"
npm = ["npm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "build:labextension:dev"
npm = ["npm"]
source_dir = "lib"
build_dir = "coi_serviceworker/labextension"
