[project]
name = "jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.18",
    "bqplot>=0.12.45",
    "ipympl>=0.9.7",
    "jupyterlab>=4.4.7",
    "jupyterlab-night>=0.5.2",
    "jupyterlab-widgets>=3.0.15",
    "jupyterlite-core>=0.6.4",
    "jupyterlite-pyodide-kernel>=0.6.1",
    "nblink>=0.1.12",
    "notebook>=7.4.5",
    "plotly>=6.3.0",
]

[dependency-groups]
dev = [
    "scipy>=1.16.2",
]

[tool.ruff]
exclude = [
    "content/pyodide/",
    "content/python.ipynb",
]
